# PwZN

Lab1/: Zadanie1.py  pyproject.toml
Lab10/: Zadanie10.py  pyproject.toml
Lab11/: Zadanie11.ipynb  pyproject.toml
Lab2/: Zadanie2.py  magnetyzacja.txt  pyproject.toml
Lab3/: Zadanie3.py  pyproject.toml
Lab4/: Zadanie4.py  dane_www.json  pyproject.toml
Lab5/: Zadanie5.py  dane_www.json  pyproject.toml
Lab6/: Laboratorium6.ipynb  Laboratorium6_Lab2_like.py  magnetyzacja.txt  pyproject.toml
Lab7/: Laboratorium7.ipynb  pyproject.toml
Lab8/: Laboratopium8.ipynb  pyproject.toml
Lab9/: app.py  pyproject.toml
