[tool.poetry]
name = "lab1"
version = "0.1.0"
description = "Histogram slow w ksiazce"
authors = ["Natalia Grzybicka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rich = "^12.6.0"
numpy = "^1.23.4"
ascii_graph = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
