[tool.poetry]
name = "lab11"
version = "0.1.0"
description = ""
authors = ["Natalia Grzybicka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
