[tool.poetry]
name = "lab3"
version = "0.1.0"
description = "Dekorator, ktory zlicza czas wykonania funkcji i zwraca parametry takie jak min, max, srednia, stdev"
authors = ["Natalia Grzybicka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.23.4"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
