[tool.poetry]
name = "lab4"
version = "0.1.0"
description = "Scrapping statyczny"
authors = ["Natalia Grzybicka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
