[tool.poetry]
name = "lab9"
version = "0.1.0"
description = "Bokeh"
authors = ["Natalia Grzybicka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
scipy = "^1.10.0"
bokeh = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
